# embree

./: .gitignore
tutorials/common/lights/: quad_light.cpp
tutorials/common/tutorial/: scene_device.cpp  tutorial.cpp
tutorials/minimal/: CMakeLists.txt  aaf_helper.cpp  aaf_helper.h  helper.cpp  helper.h  main.cpp  minimal  minimal.cpp  minimal.h  readfile.cpp  readfile.h  readme.md
tutorials/minimal/data/: camera.txt  light.txt  material.mtl
tutorials/minimal/data/basic/: camera.txt  light.txt  material.mtl
tutorials/minimal/data/cactus/: camera.txt  light.txt  material.mtl
tutorials/minimal/data/camel/: light.txt  material.mtl
tutorials/minimal/data/grid/: camera.txt  light.txt  material.mtl
tutorials/minimal/experiments/: graph.py
tutorials/minimal/include/: FreeImage.h
tutorials/models/: cornell_box_quadlight.ecs
tutorials/pathtracer/: pathtracer.cpp  pathtracer_device.cpp
